--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Hello world action step
-        uses: ./.github/actions/action # Uses an action in the root directory
+        uses: ./.github/actions/action.yml # Uses an action in the root directory
         id: hello
         with:
           who-to-greet: 'Mona the Octocat'
