--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,7 @@ jobs:
       # 「hello」ステップの出力を使用する
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
+      - name: python test
+        uses: ./.github/actions/action2 # Uses an action in the root directory
+        id: python
+      
