--- a/.github/actions/action2/Dockerfile
+++ b/.github/actions/action2/Dockerfile
@@ -1,4 +1,7 @@
 # 公式からpython3.7 on alpine linuxイメージをpull
 FROM python:3.7-slim-buster
-COPY test.py /test.py
+# 作業ディレクトリを設定
+WORKDIR /usr/src/
+
+COPY test.py /usr/src/test.py
 CMD ["python", "test.py"]
