--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,9 @@ jobs:
 
       - name: python test
         uses: ./.github/actions/action2 # Uses an action in the root directory
+        env:
         id: python
 
       - name: check secret
-        run: echo SECRET_KEY_TEST
+        run: echo ${SECRET_KEY_TEST}
       
