--- a/.github/actions/action3/Dockerfile
+++ b/.github/actions/action3/Dockerfile
@@ -4,4 +4,5 @@ FROM python:3.7-slim-buster
 WORKDIR /usr/src/
 
 COPY check.py /usr/src/check.py
+COPY /mypackage /usr/src/mypackage 
 CMD ["python", "/usr/src/check.py"]
