--- a/.github/actions/action3/Dockerfile
+++ b/.github/actions/action3/Dockerfile
@@ -3,6 +3,5 @@ FROM python:3.7-slim-buster
 # 作業ディレクトリを設定
 WORKDIR /usr/src/
 
-COPY check.py /usr/src/check.py
-COPY /mypackage /usr/src/mypackage 
-CMD ["python", "/usr/src/check.py"]
+COPY check.py /check.py
+CMD ["python", "/check.py"]
