--- a/.github/actions/action3/Dockerfile
+++ b/.github/actions/action3/Dockerfile
@@ -1,7 +1,6 @@
 # 公式からpython3.7 on alpine linuxイメージをpull
 FROM python:3.7-slim-buster
 # 作業ディレクトリを設定
-WORKDIR /usr/src/
 
-COPY check.py /check.py
-CMD ["python", "/check.py"]
+COPY check.py ./check.py
+CMD ["python", "./check.py"]
