--- a/.github/actions/action3/Dockerfile
+++ b/.github/actions/action3/Dockerfile
@@ -2,5 +2,6 @@
 FROM python:3.7-slim-buster
 # 作業ディレクトリを設定
 
-COPY check.py ./check.py
-CMD ["python", "./check.py"]
+COPY check.py /check.py
+RUN pwd
+CMD ["python", "/check.py"]
