--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: python check
         uses: ./.github/actions/action3 # Uses an action in the root directory
+        run: python .github/scripts/check.py
         id: python2
 
       - name: check secret
