--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,10 @@ jobs:
       - name: python check
         uses: ./.github/actions/action3 # Uses an action in the root directory
 
-      - name: python check2
+      - name: python install
         run: pip install -e .
+
+      - name: 実行
         run: python .github/scripts/check.py
         id: python2
 
